--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,5 @@
 .DS_Store
 .prettierignore
 
-# Avoid adding README files for now
-README-template.md
-README.md
+# Avoid adding README-info file
+README-info.md
